<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appNameText"
        android:layout_width="310dp"
        android:layout_height="129dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@color/darkGreen"
        android:text="@string/ecotrack"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pleaseSignInText"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/please_sign_in"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameText"
        app:layout_constraintVertical_bias="0.933" />

    <TextView
        android:id="@+id/username"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/Username"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pleaseSignInText" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_margin="16dp"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_username"
        android:textColorHint="@color/gray"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/pleaseSignInText" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_margin="16dp"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toEndOf="@+id/passwordText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/forgotAccountTextView"
        android:layout_width="229dp"
        android:layout_height="54dp"
        android:layout_marginTop="60dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="forgot_id_password"
        android:text="@string/forgot_id_password"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="150dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/darkGreen"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <TextView
        android:id="@+id/noAccountTextview"
        android:layout_width="229dp"
        android:layout_height="54dp"
        android:gravity="center"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotAccountTextView"
        app:layout_constraintVertical_bias="0.139" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="150dp"
        android:layout_height="54dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/darkGreen"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noAccountTextview" />

</androidx.constraintlayout.widget.ConstraintLayout>